feat: harden backend for production